--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,13 @@
 pipeline:
   build:
-    image: ruby:2.4.2
+    image: python:3.5.1-alpine
     commands:
-      - bundle install
-      - bundle exec rspec spec
-  slack:
-    image: plugins/slack
-    channel: codebuilds
-    webhook: https://hooks.slack.com/services/xxx
+      - pip install --upgrade pip setuptools wheel
+      - pip wheel -r requirements.txt --wheel-dir=wheeldir --find-links=wheeldir
+      - pip wheel -r test-requirements.txt --wheel-dir=wheeldir --find-links=wheeldir
+      - pip install --no-index --find-links=wheeldir -r requirements.txt
+      - pip install --no-index --find-links=wheeldir -r test-requirements.txt
+      - python setup.py install
+      - flake8 dronedemo
+      - mkdir -p coverage
+      - nosetests -v tests/
