--- a/nginx.yml
+++ b/nginx.yml
@@ -1,18 +1,31 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1beta2                              
 kind: Deployment
 metadata:
-  name: nginx0-deployment
-  labels:
-    app: nginx0-deployment
+    name: nginx
 spec:
-  replicas: 2
-  template:
-    metadata:
-      labels:
-        app: nginx0
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
+    selector:
+        matchLabels:
+            app: nginx
+    replicas: 1
+    template:
+        metadata:
+            labels:
+                app: nginx
+        spec:
+            containers:
+              - name: nginx
+                image: stenote/nginx-hostname:latest
+---
+apiVersion: v1
+kind: Service
+metadata:
+    name: nginx
+    labels:
+        apps: nginx
+spec:
+    selector:
+      app: nginx
+    ports:
+      - protocol: TCP
+        port: 80
+        name: http
