--- a/nginx.yml
+++ b/nginx.yml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: ReplicationController
+kind: Deployment
 metadata:
   name: nginx
 spec:
@@ -17,4 +17,3 @@ spec:
         image: nginx
         ports:
         - containerPort: 80
-#1
