--- a/nginx.yml
+++ b/nginx.yml
@@ -1,19 +1,18 @@
-apiVersion: v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: nginx
+  name: nginx0-deployment
+  labels:
+    app: nginx0-deployment
 spec:
   replicas: 2
-  selector:
-    app: nginx
   template:
     metadata:
-      name: nginx
       labels:
-        app: nginx
+        app: nginx0
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: k8s.gcr.io/nginx:1.7.9
         ports:
         - containerPort: 80
