--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -13,6 +13,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: 834406757853.dkr.ecr.ap-south-1.amazonaws.com/test:latest
+        #image: 834406757853.dkr.ecr.ap-south-1.amazonaws.com/test:latest
+        image: nginx:latest
         ports:
         - containerPort: 80
