--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -14,6 +14,7 @@ spec:
       containers:
       - name: nginx
         image: 834406757853.dkr.ecr.ap-south-1.amazonaws.com/test:latest
+        imagePullPolicy: Always
         #image: nginx:latest
         ports:
         - containerPort: 80
