--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -6,6 +6,8 @@ metadata:
     app: nginx0-deployment
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
