--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx0-deployment
 spec:
-  replicas: 1
+  replicas: 2
   strategy:
     type: RollingUpdate
   template:
@@ -16,7 +16,10 @@ spec:
       containers:
       - name: nginx
         image: 834406757853.dkr.ecr.ap-south-1.amazonaws.com/test:$(cat version/number)
-        #image: nginx:latest
+        #image: 834406757853.dkr.ecr.ap-south-1.amazonaws.com/test:0.0.17
+        resources:
+          requests:
+            cpu: 100m
         imagePullPolicy: Always
         #image: nginx:latest
         ports:
