--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx0-deployment
 spec:
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
@@ -16,6 +16,6 @@ spec:
         image: 834406757853.dkr.ecr.ap-south-1.amazonaws.com/test:$(cat version/number)
         #image: 834406757853.dkr.ecr.ap-south-1.amazonaws.com/test:0.0.36
         #imagePullPolicy: Always
-        image: nginx:latest
+        #image: nginx:latest
         ports:
         - containerPort: 80
