--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -9,7 +9,7 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx0
+        app: nginx0-deployment
     spec:
       containers:
       - name: nginx
