--- a/k8s/nginx.yml
+++ b/k8s/nginx.yml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: nginx0-deployment
-  labels:
+  matchLabels:
     app: nginx0-deployment
 spec:
   replicas: 2
